# c64gate

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  PLANS.md  README.md  WORKLOG.md  build  docker-compose.yml  pyproject.toml  requirements-dev.lock.txt  requirements-dev.txt  requirements.lock.txt  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/caddy/: Caddyfile
config/dnsmasq/: dnsmasq.conf
config/logging/: schema.json
config/nftables/: ruleset.nft
config/proftpd/: proftpd.conf.tpl
doc/: architecture.md  developer.md  traceability-matrix.yaml
doc/audit/: security-audit.md  security-remediation-plan.md
docker/: entrypoint.sh
scripts/: setup-host-https.sh  trust-caddy-local-ca.sh
src/common/: __init__.py  capture.py  config_renderers.py  logging.py  settings.py
src/controlplane/: app.py  auth.py  runtime.py
src/log_normalizer/: __init__.py  adapters.py
src/upgrade_proxy/: __init__.py  cache.py  service.py
tests/: conftest.py
tests/hil/: test_c64u_hil.py
tests/integration/: test_build_script.py  test_caddy.py  test_capture.py  test_controlplane.py  test_dhcp_and_dns.py  test_firewall.py  test_ftps.py  test_logging.py  test_runtime.py  test_runtime_security.py  test_settings.py  test_stream_logging.py  test_traceability.py  test_upgrade_proxy.py
tests/smoke/: test_image_runtime.py
tools/: check_traceability.py
